# tuto_calculator

./: .gitignore  README.md  ____init_____8py_source.html  annotated.html  basics_8py_source.html  classcalculator_1_1basics_1_1Calculator-members.html  classcalculator_1_1basics_1_1Calculator.html  classes.html  cli_8py_source.html  dir_05e57a8512d411a64fc14754c853dfa6.html  dir_05e57a8512d411a64fc14754c853dfa6_dep.dot  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  functions.html  functions_func.html  graph_legend.html  index.html  namespacecalculator_1_1basics.html  namespacecalculator_1_1cli.html  namespacemembers.html  namespacemembers_func.html  namespaces.html  pyproject.toml
.github/workflows/: doxygen.yaml  pylint.yaml  pytest.yaml
docs/: doxygen_config
search/: all_1.js  all_2.js  classes_0.js  functions_0.js  namespaces_0.js  searchdata.js
src/calculator/: basics.py  cli.py
tests/: test_simple.py
