[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "calculator"
authors = [
    {name = "Firstname Lastname", email = "firstname.lastname@domain.x"},
]
description = "Extreme calculator"
dynamic = ["version"]
license = "CECILL-C"
license-files = ["LICENSE"]
dependencies=[
    "f90nml",
            ]

[tool.setuptools.dynamic]
version = {attr = "calculator.__version__"}

[project.scripts]
'calculator_add' = "calculator.cli:main"
